# paidy-assignment

./: Cargo.toml  README.md
src/: api.rs  cli.rs  database.rs  endpoints.rs  errors.rs  http.rs  lib.rs  routes.rs  threadpool.rs
src/database/: database.rs  mock.rs  mod.rs  sqlite.rs
src/http/: client.rs  mod.rs  request.rs  response.rs  server.rs
