[package]
name = "paidy-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
httparse = "1.9.5"
matchit = "0.8.5"
rand = "0.8.5"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "common"
path = "src/lib.rs"
